# Canopy

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  development.md  releasing.md  security-model.md  troubleshooting.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: autostart.rs  computers.rs  connection.rs  directory.rs  groups.rs  mod.rs  reports.rs  users.rs
src-tauri/src/powershell/: executor.rs  mod.rs  sanitizer.rs
src/components/credentials/: credential-dialog.tsx  elevation-dialog.tsx
src/components/dashboard/: dashboard-overview.tsx
src/components/layout/: app-layout.tsx  sidebar.tsx
src/components/shared/: context-menu.tsx  (+3 more)
src/hooks/: use-ad-computers.ts  use-ad-directory.ts  use-ad-groups.ts  use-ad-reports.ts  use-ad-users.ts  use-debounced-value.ts  use-resizable-columns.ts
src/lib/: autostart.ts  connection-response.ts  feedback.ts  ou-tree.ts  query-client.ts  query-persistence.ts  tauri-ad.ts  utils.ts  window-shell.ts
src/pages/: computers.tsx  dashboard.tsx  directory.tsx  groups.tsx  reports.tsx  settings.tsx  users.tsx
src/stores/: credential-store.ts  elevation-store.ts  ou-scope-store.ts
(+1 files in other folders)
