[package]
name = "fuzzy-forest"
version = "0.1.2"
description = "Windows-native Active Directory management desktop app built with Tauri, React, and Rust."
authors = ["Fuzzy Forest contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/giftedloser/FuzzyForest"
homepage = "https://github.com/giftedloser/FuzzyForest"
readme = "../README.md"

[lib]
name = "fuzzy_forest_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-autostart = "2"
